--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cards</title>
+    <title>MathJack</title>
     <link rel="stylesheet" href="styles/index.css">
 	<link rel="icon" href="assets/pics/spades.png">
 </head>
